<resources>
    <string name="app_name">BabyCareManager</string>
    <string name="seletc_image">a</string>
    <string name="title_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="Date">01.07.2020</string>
    <string name="edit_name">Name</string>
    <string name="birthday">Birthday:</string>
    <string name="card_application">Application</string>
    <string name="clear_database">Clear database</string>
    <string name="invite_partner">Invite partner</string>
    <string name="enter_code">Enter code</string>
    <string name="i_have_an_invite_code">I have an invite code</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name1">Name</string>
    <string name="birthday1">Birthday</string>
    <string name="done">DONE</string>
    <string name="l">L</string>
    <string name="r">R</string>
    <string name="left">Left</string>
    <string name="time">00:00</string>
    <string name="comment">Comment</string>
    <string name="title_diaper">Diaper</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="info">Comment</string>
    <string name="duration">Duration:</string>
    <string name="title_all_actions">All Actions</string>
    <string name="title_all_today">All Today</string>
    <string name="poo">Poo</string>
    <string name="pee">Pee</string>
    <string name="age_3_months">Age: 3 months</string>
    <string name="today">Today</string>
    <string name="activities">Activities</string>
    <string name="invite_partner_to_n_baby_care">Invite partner to   Baby Care!</string>
    <string name="your_invite_code">Your invite code:</string>
    <string name="code">00000000000</string>
    <string name="share">Share</string>
    <string name="title_sleep">Sleep</string>
    <string name="title_bath">Bath</string>
    <string name="title_walk">Walk</string>
    <string name="title_feeding">Feeding</string>
    <string name="right">Right</string>
    <string name="formula">Formula</string>
    <string name="meal">Meal</string>
    <string name="Code">Code</string>
    <string name="code_msg">Type the code</string>
</resources>