<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome.WelcomeFragment">

    <View
        android:id="@+id/bg_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray"
        android:elevation="6dp"
        android:visibility="gone"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_boy"
        app:civ_border_width="4dp"
        app:civ_border_overlay="true"
        app:civ_border_color="@color/colorPrimary"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/photo"
        android:elevation="1dp"
        android:background="@drawable/splash_background">

        <EditText
            android:id="@+id/baby_name"
            style="@style/EditText"
            android:layout_alignParentTop="true"
            android:layout_marginTop="69dp"
            android:gravity="center_vertical"
            android:hint="@string/name1"
            android:inputType="textPersonName"
            android:lines="1"/>

        <TextView
            android:id="@+id/birthday"
            style="@style/EditText"
            android:layout_below="@id/baby_name"
            android:layout_marginTop="15dp"
            android:foreground="@drawable/ripple"
            android:gravity="center_vertical"
            android:hint="@string/birthday1"
            android:paddingEnd="10dp"
            app:drawableEndCompat="@drawable/ic_calendar" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/done"
            style="@style/MaterialButtonWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/done"
            android:gravity="center_vertical"
            android:layout_below="@id/birthday"
            android:layout_centerHorizontal="true"
            app:icon="@drawable/ic_check"
            />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/code_card"
        app:cardElevation="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="15dp"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/card_title"
                style="@style/WelcomeCardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:animateLayoutChanges="true"
                android:text="@string/i_have_an_invite_code" />

            <EditText
                android:id="@+id/code"
                style="@style/EditText"
                android:layout_below="@id/card_title"
                android:layout_centerHorizontal="true"
                android:animateLayoutChanges="true"
                android:hint="@string/Code"
                android:inputType="textPersonName"
                android:visibility="gone" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/ok_code"
                style="@style/MaterialButtonPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/code"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:animateLayoutChanges="true"
                android:text="@string/ok"
                android:visibility="gone"
                app:elevation="0dp"
                app:icon="@drawable/ic_check" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
</layout>