<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feeding.FeedingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_toolbar"
        android:backgroundTint="@color/colorRed"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:navigationIcon="@drawable/ic_back"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:elevation="0dp"
            android:background="@drawable/shape_toolbar"
            android:backgroundTint="@color/colorRed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/baby_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_feeding"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

<RelativeLayout
    android:id="@+id/buttons"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:gravity="center_horizontal|center_vertical"
    android:layout_below="@+id/app_bar"
    android:layout_marginTop="12dp"
    >

    <Button
        android:id="@+id/left"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginEnd="9dp"
        android:layout_toStartOf="@+id/right"
        android:background="@drawable/shape_action_button"
        android:foreground="@drawable/ripple"
        android:scaleType="fitCenter"
        android:text="@string/l"
        android:textSize="40sp"
        app:backgroundTint="@color/colorGreen" />

    <Button
        android:id="@+id/right"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_toStartOf="@+id/formula"
        android:text="@string/r"
        android:textSize="40sp"
        app:backgroundTint="@color/colorGreen"
        android:foreground="@drawable/ripple"
        android:background="@drawable/shape_action_button"
        android:layout_marginEnd="8dp"/>
    <Button
        android:id="@+id/formula"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_toStartOf="@+id/meal"
        android:background="@drawable/shape_action_button"
        android:foreground="@drawable/ripple"
        app:backgroundTint="@color/colorRed"
        android:drawableTop="@drawable/ic_bottle"
        android:paddingTop="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/meal"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_alignParentEnd="true"
        app:backgroundTint="@color/colorYellow"
        android:foreground="@drawable/ripple"
        android:drawableTop="@drawable/ic_cutlery"
        android:paddingTop="8dp"
        android:background="@drawable/shape_action_button"
       />
</RelativeLayout>

    <TextView
        android:id="@+id/ac_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:textColor="@color/colorRed"
        android:textAlignment="center"
        android:layout_below="@+id/buttons"
        android:layout_centerHorizontal="true"
        style="@style/CodeTextStyle"
        />
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/WelcomeScreenTitle"
        android:textSize="60sp"
        android:layout_below="@id/ac_title"
        android:text="@string/time"
        android:textColor="@color/colorRed"
        android:layout_centerHorizontal="true"/>


    <EditText
        android:id="@+id/comment"
        style="@style/CommentEditText"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_below="@+id/timer"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_edit_text"
        android:hint="Comment"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/timer_start"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/ic_play"
            app:backgroundTint="@color/colorRed"
            android:foreground="@drawable/ripple"
            android:animateLayoutChanges="true"
            />

        <Button
            android:id="@+id/timer_pause"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/ic_round_pause_circle_filled_24"
            app:backgroundTint="@color/colorRed"
            android:foreground="@drawable/ripple"
            android:animateLayoutChanges="true"
            android:visibility="gone"/>

        <Button
            android:id="@+id/timer_stop"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/ic_stop"
            app:backgroundTint="@color/colorRed"
            android:foreground="@drawable/ripple"
            android:animateLayoutChanges="true"
            android:visibility="gone"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/ic_check"
            app:backgroundTint="@color/colorRed"
            android:foreground="@drawable/ripple"
            android:animateLayoutChanges="true"
            android:visibility="gone"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ac_title"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:layout_toEndOf="@+id/timer"
        app:tint="@color/colorRed"
        app:srcCompat="@drawable/ic_edit"
        android:foreground="@drawable/ripple"
        android:animateLayoutChanges="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/ml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/comment"
        android:layout_centerHorizontal="true"
        android:text="ml"
        android:textSize="50sp"
        android:textColor="@color/colorRed"
        android:visibility="gone"
        />
</RelativeLayout>
</layout>